--- a/control
+++ b/control
@@ -7,7 +7,7 @@ Standards-Version: 3.8.0
 Homepage: http://bitcheese.net/QMPDClient
 
 Package: qmpdclient
-Version: 1.1.2-1
+Version: 1.1.3-1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: QT4 based MPD-Front-end
@@ -24,3 +24,4 @@ Description: QT4 based MPD-Front-end
   * Play-list management
   * Tag-guessing for untagged files
   * Directory browser
+  * Shoutcast browser
